# vimsettings

./: .gitmodules  .gvimrc  .vimrc  README.md  config.sh
.vim/: .netrwhist  astyle  test.Rout
.vim/bundle/_mine/: clang-format.py  ycm_global.py
.vim/bundle/_mine/colors/: force.vim  midnight.vim
.vim/bundle/_mine/ftdetect/: cpp11.vim  prolog.vim
.vim/bundle/_mine/ftplugin/: cpp.vim  markdown.vim
.vim/bundle/_mine/syntax/: libsylph.vim  mips.vim  mixal.vim
.vim/bundle/comments/plugin/: comments.vim
.vim/bundle/perl-support/plugin/: perl-support.vim
.vim/bundle/slimv/ftplugin/: slimv.vim
.vim/bundle/slimv/ftplugin/clojure/: slimv-clojure.vim
.vim/bundle/slimv/ftplugin/lisp/: slimv-lisp.vim
.vim/bundle/slimv/slime/contrib/: swank-mit-scheme.scm
.vim/bundle/vim-R-plugin/doc/: tags
.vim/bundle/vim-lldb/plugin/: lldb.vim
.vim/bundle/vim-powerline/autoload/Powerline/Themes/: default.vim
.vim/bundle/vim-snipmate/autoload/: snipMate.vim
.vim/bundle/vim-snippets/: AUTHORS
.vim/bundle/vim-snippets/snippets/: _.snippets  c.snippets  cpp.snippets  lex.snippets  perl.snippets  python.snippets
.vim/mj/config/: default.js
.vim/skel/: .ycm_local_conf.py  CMakeLists.txt
